<?xml version="1.0" encoding="UTF-8"?>
<!--
   ~ Copyright 2019 Ticketmaster
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollView"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:layout_constraintBottom_toBottomOf="parent"
  app:layout_constraintLeft_toLeftOf="parent"
  app:layout_constraintRight_toRightOf="parent"
  app:layout_constraintTop_toBottomOf="@+id/tabs">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
      android:id="@+id/textViewRotatingNormal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/rotating_normal"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
      android:id="@+id/buttonPickColor"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:padding="8dp"
      android:background="?selectableItemBackgroundBorderless"
      app:layout_constraintHorizontal_bias="1"
      app:layout_constraintLeft_toRightOf="@+id/textViewRotatingNormal"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_color" />


    <com.ticketmaster.presence.SecureEntryView
      android:id="@+id/secureEntryView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      app:branding_color="@color/customBrandingOrange"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewRotatingNormal" />

    <TextView
      android:id="@+id/textViewRotatingSized"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/rotating_sized"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/secureEntryView" />

    <com.ticketmaster.presence.SecureEntryView
      android:id="@+id/secureEntryViewSized"
      android:layout_width="244dp"
      android:layout_height="wrap_content"
      app:branding_color="@color/customBrandingTeal"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewRotatingSized" />

    <TextView
      android:id="@+id/textViewRotatingFullWidth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/rotating_full_width"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/secureEntryViewSized" />

    <com.ticketmaster.presence.SecureEntryView
      android:id="@+id/secureEntryViewFullWidth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="16dp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewRotatingFullWidth" />

    <TextView
      android:id="@+id/textViewRotatingNoToken"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/rotating_no_token"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/secureEntryViewFullWidth" />

    <com.ticketmaster.presence.SecureEntryView
      android:id="@+id/secureEntryViewNoToken"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewRotatingNoToken" />

    <TextView
      android:id="@+id/textViewRotatingBadToken"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:text="@string/rotating_bad_token"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/secureEntryViewNoToken" />

    <com.ticketmaster.presence.SecureEntryView
      android:id="@+id/secureEntryViewBadToken"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:padding="16dp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewRotatingBadToken" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
